nx2/blocks/snapshot-admin/views/snapshot.css
/* stylelint-disable no-descending-specificity */
:host {
  > svg {
    display: none;
  }
}

input,
button {
  font-family: var(--s2-font-family);
}

p {
  margin: 0;
}

svg.icon {
  display: block;
  width: 20px;
  height: 20px;
}

.nx-snapshot-wrapper {
  position: relative;
  padding: 12px 12px 12px 18px;
  background-color: var(--s2-gray-50);
  transition: background-color 0.2s ease-in-out;

  &.is-open {
    background-color: var(--s2-blue-200);
  }

  .nx-snapshot-overlay {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 12px;
    font-size: 24px;
    font-weight: 700;
    position: absolute;
    inset: 0;
    background: rgb(255 255 255 / 60%);
    z-index: 10;
  }

  .nx-snapshot-spinner {
    display: block;
    width: 32px;
    height: 32px;
    animation: spin 1.5s linear infinite;
    transform-box: fill-box;
    transform-origin: center;
  }
}

.nx-snapshot-header {
  display: grid;
  align-items: center;
  grid-template-columns: 1fr auto;
  gap: var(--s2-spacing-400);
  font-weight: 700;

  .nx-snapshot-header-title {
    display: grid;
    grid-template-columns: 1fr 64px;
    gap: var(--s2-spacing-400);

    .nx-snapshot-link {
      display: inline-flex;
      align-items: center;
      gap: 6px;
      border: none;
      border-radius: 4px;
      background: transparent;
      cursor: pointer;
      vertical-align: middle;

      &:hover {
        background: #0000001a;
      }

      .copied {
        font-size: 12px;
        font-weight: 400;
        color: var(--s2-green-900);
        animation: fade-in-out 1.5s ease-in-out;
      }

      svg.icon {
        width: 14px;
        height: 14px;
      }
    }
  }

  .name-missing {
    border: 2px dotted var(--s2-red-900);
    padding-left: 3px;
  }

  .name-invalid {
    border: 2px solid var(--s2-red-900);
    padding-left: 3px;
  }

  .nx-snapshot-expand {
    position: relative;
    display: block;
    width: 32px;
    height: 32px;
    border: none;
    border-radius: 4px;
    text-indent: -1000px;
    overflow: hidden;
    background: transparent;
  }

  .nx-snapshot-expand::after {
    position: absolute;
    inset: 0;
    content: "";
    width: 32px;
    height: 32px;
    background: no-repeat center / 18px url("https://da.live/nx/img/icons/Smock_ChevronRight_18_N.svg") transparent;
    transition: transform 0.2s ease-in-out;
  }

  .nx-snapshot-expand:hover {
    background: #0000001a;
  }

  input {
    background-color: transparent;
    border: none;
    padding: 0;
    line-height: 32px;
    border-bottom: 2px dotted var(--s2-gray-600);

    &:focus-visible {
      outline: none;
      border-bottom: 2px dotted var(--s2-blue-900);
    }
  }
}

.nx-snapshot-details {
  display: none;
  grid-template-columns: 1.4fr 0.6fr;
  gap: 24px;
  margin-top: 8px;
}

.is-open {
  .nx-snapshot-expand::after {
    transform: rotate(90deg);
  }

  .nx-snapshot-details {
    display: grid;
  }
}

.nx-snapshot-details-left {
  position: relative;

  &.is-list::after {
    pointer-events: none;
    content: "";
    position: absolute;
    height: 100px;
    left: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(0deg, #e5f0fe 0%, #e5f0fe00 100%);
  }
}

.nx-snapshot-edit-urls {
  height: 500px;
}

.nx-snapshot-urls {
  margin: 0;
  padding: 0;
  list-style: none;
  height: 500px;
  overflow-y: auto;

  .nx-url-row {
    padding: 4px 6px 4px 12px;
    color: var(--s2-gray-800);
    cursor: pointer;
    display: flex;
    align-items: center;
    border-radius: 8px;

    span {
      line-height: 40px;
    }

    &::after {
      content: "";
      display: block;
      width: 18px;
      height: 18px;
      margin-left: auto;
      background: no-repeat center / 14px url("https://da.live/nx/img/icons/Smock_ChevronRight_18_N.svg");
      transition: transform 0.2s ease-in-out;
      opacity: 0;
    }
  }

  li {
    border-bottom: 1px solid var(--s2-gray-400);

    &:last-child {
      border-bottom: none;
      margin-bottom: 24px;
    }

    &:hover .nx-url-row::after {
      opacity: 1;
    }

    &.is-expanded .nx-url-row::after {
      opacity: 1;
      transform: rotate(90deg);
    }
  }
}

.nx-url-accordion {
  display: flex;
  flex-wrap: wrap;
  gap: 6px;
  padding: 8px 12px 12px;

  a,
  button {
    display: inline-flex;
    align-items: center;
    gap: 4px;
    padding: 6px 10px;
    font-size: 13px;
    font-weight: 600;
    color: var(--s2-gray-800);
    background: #0000000d;
    border: none;
    border-radius: 6px;
    text-decoration: none;
    cursor: pointer;
    font-family: var(--s2-font-family);

    &:hover {
      background-color: var(--s2-blue-1000);
      color: #fff;
    }

    svg.icon {
      display: inline-block;
      width: 16px;
      height: 16px;
      vertical-align: middle;
      flex-shrink: 0;
      overflow: visible;
    }
  }
}

.nx-snapshot-sub-heading,
.nx-launch-sub-heading {
  font-weight: 700;
  text-transform: uppercase;
  font-size: var(--s2-body-size-s);
  margin-bottom: 4px;

  &.nx-snapshot-sub-heading-urls {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 8px;

    p {
      display: flex;
      justify-content: start;
      align-items: center;
      gap: 8px;
    }

    button {
      padding: 4px 6px;
      border-radius: 4px;

      &:not(:disabled):hover {
        background: var(--s2-gray-50);
      }
    }
  }

  .nx-snapshot-sub-heading-actions {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 8px;
  }

  button {
    background: transparent;
    color: var(--s2-blue-900);
    font-weight: 700;
    text-transform: uppercase;
    font-size: var(--s2-body-size-s);
    padding: 0;
    border: none;
    cursor: pointer;

    &:disabled {
      color: var(--s2-gray-600);
      cursor: not-allowed;
    }
  }
}

.nx-launch-sub-heading {
  display: flex;
  align-items: center;
  gap: 4px;
  cursor: pointer;
  user-select: none;

  &::after {
    content: "";
    display: block;
    width: 18px;
    height: 18px;
    background: no-repeat center / 18px url("https://da.live/nx/img/icons/Smock_ChevronRight_18_N.svg");
    transition: transform 0.2s ease-in-out;
  }

  &.is-expanded::after {
    transform: rotate(90deg);
  }
}

.nx-snapshot-meta {
  sl-input,
  sl-textarea {
    margin-bottom: 8px;
  }
}

.nx-snapshot-action-group,
.nx-launch-action-group {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 6px;
  border-radius: 8px;
  overflow: hidden;
  margin-bottom: 8px;

  &:last-child {
    margin-bottom: 0;
  }

  button {
    color: var(--s2-gray-800);
    font-size: 12px;
    font-weight: 700;
    background: #0000001a;
    border: none;
    padding: 16px 0;
    outline: none;
    text-align: center;
    cursor: pointer;

    &.is-editing {
      background-color: var(--s2-blue-900);
      color: #fff;
    }

    svg {
      margin: 0 auto 6px;
    }

    span {
      display: block;
      text-align: center;
    }
  }

  button:disabled {
    background: #00000045;
    cursor: not-allowed;
  }

  button:hover {
    background-color: var(--s2-blue-1000);
    color: #fff;

    &:disabled {
      background-color: #00000045;
      color: #000;
    }
  }
}

.nx-launch-action-group {
  grid-template-columns: repeat(2, 1fr);
  overflow: visible;

  button:first-child {
    border-radius: 8px 0 0 8px;
  }

  button:last-child {
    border-radius: 0 8px 8px 0;
  }

  &:has(button:only-child) {
    grid-template-columns: 1fr;
    margin: 0 auto 8px;

    button:only-child {
      border-radius: 8px;
    }
  }
}

/* Tooltip styles */
[data-tooltip] {
  position: relative;
}

[data-tooltip]:hover::after {
  content: attr(data-tooltip);
  position: absolute;
  bottom: calc(100% + 4px);
  left: 50%;
  transform: translateX(-50%);
  padding: 6px 10px;
  background: #333;
  color: white;
  border-radius: 4px;
  font-size: 12px;
  font-weight: 400;
  text-transform: none;
  white-space: nowrap;
  pointer-events: none;
  z-index: 1000;
  animation: tooltip-appear 0.15s ease-out;
}

[data-tooltip]:hover::before {
  content: "";
  position: absolute;
  bottom: 100%;
  left: 50%;
  transform: translateX(-50%);
  border: 4px solid transparent;
  border-top-color: #333;
  pointer-events: none;
  z-index: 1000;
  animation: tooltip-appear 0.15s ease-out;
}

@keyframes tooltip-appear {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

@keyframes fade-in-out {
  0% {
    opacity: 0;
  }

  20% {
    opacity: 1;
  }

  80% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

